# Musterdatenkatalog-V4

./: README.md  pyproject.toml
card_templates/: dataset_card_base.md  model_card_base.md
data/annotations/mapper/: 2023_02_21_v3_v4_mapper.xlsx  v2_v3_mapper.csv
data/raw/: 2023_01_19_plural_names_208_v1.txt  2023_01_19_singular_names_208_v1.txt  2023_04_20_cities_910_v3.csv  2023_10_16_cities_1175_v4.csv  2024_07_28_cities_1611_v5.csv  2024_08_20_cities_1310_v5.csv  Musterdatenkatalog_Informationstabelle.csv  Musterdatenkatalog_Taxonomie_V4.xlsx
paths/: .env.dev
src/: settings.py
src/analysis/annotation/: annotator_agreement_annotation_rounds.py  annotator_agreement_test_rounds.py
src/analysis/eda/: baseline_training.ipynb  enriched_data_exploration.ipynb
src/analysis/extraction/: extraction_data_evaluation_and_checks.ipynb
src/analysis/training/: analysis_labelled_data.py  evaluate.py
src/components/: bert_sim.py  parser.py  pipeline.py  scraper.py
src/model_training/: sbert_augmentation_trainer.py  sentence_transfomer_trainer.py  train.py  train_revision_a90730.py
src/preprocessing/: base_generate_training_data.py
src/preprocessing/annotation_handling/: disambiguate_annotations.py  download_gov_data.py  generate_annotation_data.py  merge_annotations_and_get_ambiguous_data.py  parse_gov_data.py  split_annotation_data.py
src/preprocessing/extraction/: calculate_potential.py  generate_extraction_data_and_preprocess.py  generate_pivot_table.py
src/tests/: test_bert_sim.py
src/utils/: data.py  preprocessing_functions.py
(+4 files in other folders)
